--- a/server/package.json
+++ b/server/package.json
@@ -12,17 +12,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^17.0.21",
+    "@types/validator": "^13.7.1",
     "tsc-watch": "^4.6.2",
     "typescript": "^4.6.2"
   },
   "dependencies": {
     "apollo-server-core": "^3.6.4",
     "apollo-server-express": "^3.6.4",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.45"
+    "typeorm": "^0.2.45",
+    "validator": "^13.7.0"
   }
 }
