--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^17.0.21",
+    "@types/nodemailer": "^6.4.4",
     "@types/validator": "^13.7.1",
     "tsc-watch": "^4.6.2",
     "typescript": "^4.6.2"
@@ -22,9 +23,11 @@
     "apollo-server-core": "^3.6.4",
     "apollo-server-express": "^3.6.4",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.45",
     "validator": "^13.7.0"
