Validamos cuenta por medio de un email

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
+GITHUB_TOKEN = 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
+
 PORT = 4000
 
 DATABASE_TYPE = "mysql"
@@ -6,3 +8,9 @@ DATABASE_PORT = "3306"
 DATABASE_USERNAME = "root"
 DATABASE_PASSWORD = "claudio123"
 DATABASE_NAME = "graphql"
+
+NODEMAILER_HOST = "smtp.ethereal.email"
+NODEMAILER_PORT = "587"
+NODEMAILER_USER = "henry.jacobi46@ethereal.email"
+NODEMAILER_PASS = "kscG6vSH9hTuT3q5jS"
+NODEMAILER_TO = "claudioguevaradev@gmail.com"
