Registramos usuarios desde el client

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
-GITHUB_TOKEN = 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
+GITHUB_TOKEN = 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
 
-PORT = 4000
+PORT_APP = 4000
+PORT_HOST = "localhost"
 
 DATABASE_TYPE = "mysql"
 DATABASE_HOST = "localhost"
@@ -11,6 +12,6 @@ DATABASE_NAME = "graphql"
 
 NODEMAILER_HOST = "smtp.ethereal.email"
 NODEMAILER_PORT = "587"
-NODEMAILER_USER = "henry.jacobi46@ethereal.email"
-NODEMAILER_PASS = "kscG6vSH9hTuT3q5jS"
+NODEMAILER_USER = "oliver.streich12@ethereal.email"
+NODEMAILER_PASS = "c7fb9hW3fggTR74kyJ"
 NODEMAILER_TO = "claudioguevaradev@gmail.com"
