--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
+    "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
