login listo desde el backend y el frontend

--- a/server/.env
+++ b/server/.env
@@ -12,6 +12,8 @@ DATABASE_NAME = "graphql"
 
 NODEMAILER_HOST = "smtp.ethereal.email"
 NODEMAILER_PORT = "587"
-NODEMAILER_USER = "oliver.streich12@ethereal.email"
-NODEMAILER_PASS = "c7fb9hW3fggTR74kyJ"
+NODEMAILER_USER = "davonte.lubowitz52@ethereal.email"
+NODEMAILER_PASS = "SzrAVAgB6BHxuSxTJd"
 NODEMAILER_TO = "claudioguevaradev@gmail.com"
+
+SECRET_TOKEN = "key"
