--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
     "@types/nodemailer": "^6.4.4",
     "@types/validator": "^13.7.1",
@@ -26,6 +27,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
     "reflect-metadata": "^0.1.13",
