--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
     "graphql": "^16.3.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
