--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "apollo-link-context": "^1.0.20",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
     "graphql": "^16.3.0",
